# dichotomous_image_segmentation

./: Colab_Demo.ipynb  pyproject.toml  requirements.txt
IS_Net/: train_valid_inference_main.py
dichotomous_image_segmentation/: segmentation_manager.py
dichotomous_image_segmentation/IS_Net/: Inference.py  train_valid_inference_main.py
dichotomous_image_segmentation/IS_Net/models/: __init__.py
dichotomous_image_segmentation/tests/: test_segmentation_manager.py
